SFUSA/force-app/main/default/objects/POS_Static_Resource__mdt/listViews/All_Details.listView-meta.xml
<ListView>
        <fullName>All_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Brand__c</columns>
        <columns>Item_Text__c</columns>
        <columns>Static_Resource_Name__c</columns>
        <columns>POS_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <language>en_US</language>
    </ListView>