SFUSA/force-app/main/default/objects/POS_Static_Resource__mdt/listViews/Knob_Creek.listView-meta.xml
<ListView>
        <fullName>Knob_Creek</fullName>
        <columns>MasterLabel</columns>
        <columns>Brand__c</columns>
        <columns>POS_Item__c</columns>
        <columns>Item_Text__c</columns>
        <columns>Static_Resource_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Knob Creek Bourbon,Knob Creek Rye</value>
        </filters>
        <label>Knob Creek</label>
        <language>en_US</language>
    </ListView>